<resources>
    <string name="app_name">MovieDatabase</string>
    <string name="btn_hit">Hit API</string>
    <string name="title">Title</string>
    <string name="img">img</string>
    <string name="subtitle">Sub title</string>
    <string name="rating">rating</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_playing">Now Playing</string>
    <string name="up_coming">Upcoming</string>
    <string name="movie_details">Movie Details</string>
    <string name="genres">Genres</string>
    <string name="release_date">Release date</string>
    <string name="popularity">Popularity</string>
    <string name="production_company">Production Companies</string>
</resources>