<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:id="@+id/cons_movie_details_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_movie_details"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_cv_movie_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/blue_gradient_sideways">

            <ImageView
                android:id="@+id/img_backdrop_movie_details"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <ImageView
                android:id="@+id/img_poster_movie_details"
                android:layout_width="110dp"
                android:layout_height="150dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

            <TextView
                android:id="@+id/lbl_title_movie_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="14dp"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lbl_tagline_movie_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/subtitle"
                android:textColor="#03A9F4"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_title_movie_details" />

            <TextView
                android:id="@+id/lbl_genres_movie_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/genres"
                android:textColor="#03A9F4"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/img_backdrop_movie_details"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_poster_movie_details"
                app:layout_constraintTop_toTopOf="@+id/img_poster_movie_details" />

            <TextView
                android:id="@+id/lbl_release_date_movie_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/release_date"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/lbl_genres_movie_details"
                app:layout_constraintStart_toStartOf="@+id/lbl_genres_movie_details"
                app:layout_constraintTop_toBottomOf="@+id/lbl_genres_movie_details" />

            <TextView
                android:id="@+id/lbl_rating_movie_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/rating"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/lbl_release_date_movie_details"
                app:layout_constraintStart_toStartOf="@+id/lbl_release_date_movie_details"
                app:layout_constraintTop_toBottomOf="@+id/lbl_release_date_movie_details" />

            <TextView
                android:id="@+id/lbl_popularity_movie_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/popularity"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/lbl_rating_movie_details"
                app:layout_constraintStart_toStartOf="@+id/lbl_rating_movie_details"
                app:layout_constraintTop_toBottomOf="@+id/lbl_rating_movie_details" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_movie_details">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_sv_movie_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_overview_movie_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/subtitle"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lbl_production_movie_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/production_company"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_overview_movie_details" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_production_company"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_production_movie_details" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>